Adding arm-linux-androideabi-4.6, adds android specific fixes
Signed-off-by: Simarpreet Singh <simar@linux.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "arm-eabi-4.8"]
 	path = arm-eabi-4.8
 	url = https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-eabi-4.8
+[submodule "arm-linux-androideabi-4.6"]
+	path = arm-linux-androideabi-4.6
+	url = https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.6
