Adding arm-linux-androideabi-4.7
Signed-off-by: Simarpreet Singh <simar@linux.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "arm-linux-androideabi-4.6"]
 	path = arm-linux-androideabi-4.6
 	url = https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.6
+[submodule "arm-linux-androideabi-4.7"]
+	path = arm-linux-androideabi-4.7
+	url = https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.7
